# ironclad-carddemo-showcase

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
cobol-runtime/: Cargo.toml
cobol-runtime/carddemo-ui/: vite.config.ts
cobol-runtime/carddemo-ui/src/: App.tsx  Terminal.tsx  api.ts  types.ts
cobol-runtime/src/: bms.rs  chrono_shim.rs  cics.rs  cobol_file.rs  decimal.rs  dli.rs  ebcdic.rs  edited_numeric.rs  file_status.rs  fixed_string.rs  lib.rs  packed_decimal.rs  report_writer.rs  sql.rs  string_ops.rs  transaction_loop.rs  vsam.rs
cobol-runtime/tests/: integration.rs
parity/: Dockerfile.parity  parity_harness.sh
parity/golden/: CBACT01C.out  CBACT02C.out  CBACT03C.out  CBCUS01C.out  CBTRN01C.out  CBTRN02C.out  CBTRN03C.out
src/: CBACT01C.rs  CBACT02C.rs  CBACT03C.rs  CBACT04C.rs  CBCUS01C.rs  CBEXPORT.rs  CBIMPORT.rs  CBPAUP0C.rs  CBSTM03A.rs  CBSTM03B.rs  CBTRN01C.rs  CBTRN02C.rs  CBTRN03C.rs  COACCT01.rs  COACTUPC.rs  COACTVWC.rs  COADM01C.rs  COBIL00C.rs  COBSWAIT.rs  COBTUPDT.rs  COCRDLIC.rs  COCRDSLC.rs  COCRDUPC.rs  CODATE01.rs  COMEN01C.rs  COPAUA0C.rs  COPAUS0C.rs  COPAUS1C.rs  COPAUS2C.rs  CORPT00C.rs  COSGN00C.rs  COTRN00C.rs  COTRN01C.rs  COTRN02C.rs  COTRTLIC.rs  COTRTUPC.rs  COUSR00C.rs  COUSR01C.rs  COUSR02C.rs  COUSR03C.rs  (+4 more)
