[package]
name = "carddemo-ironclad"
version = "0.1.0"
edition = "2021"
description = "AWS CardDemo CICS/COBOL transpiled to Rust by Ironclad"
authors = ["Torsova LLC"]

[dependencies]
cobol-runtime = { path = "cobol-runtime" }

[[bin]]
name = "cbact01c"
path = "rust_output/CBACT01C.rs"

[[bin]]
name = "cbact02c"
path = "rust_output/CBACT02C.rs"

[[bin]]
name = "cbact03c"
path = "rust_output/CBACT03C.rs"

[[bin]]
name = "cbact04c"
path = "rust_output/CBACT04C.rs"

[[bin]]
name = "cbcus01c"
path = "rust_output/CBCUS01C.rs"

[[bin]]
name = "cbexport"
path = "rust_output/CBEXPORT.rs"

[[bin]]
name = "cbimport"
path = "rust_output/CBIMPORT.rs"

[[bin]]
name = "cbpaup0c"
path = "rust_output/CBPAUP0C.rs"

[[bin]]
name = "cbstm03a"
path = "rust_output/CBSTM03A.rs"

[[bin]]
name = "cbstm03b"
path = "rust_output/CBSTM03B.rs"

[[bin]]
name = "cbtrn01c"
path = "rust_output/CBTRN01C.rs"

[[bin]]
name = "cbtrn02c"
path = "rust_output/CBTRN02C.rs"

[[bin]]
name = "cbtrn03c"
path = "rust_output/CBTRN03C.rs"

[[bin]]
name = "coacct01"
path = "rust_output/COACCT01.rs"

[[bin]]
name = "coactupc"
path = "rust_output/COACTUPC.rs"

[[bin]]
name = "coactvwc"
path = "rust_output/COACTVWC.rs"

[[bin]]
name = "coadm01c"
path = "rust_output/COADM01C.rs"

[[bin]]
name = "cobil00c"
path = "rust_output/COBIL00C.rs"

[[bin]]
name = "cobswait"
path = "rust_output/COBSWAIT.rs"

[[bin]]
name = "cobtupdt"
path = "rust_output/COBTUPDT.rs"

[[bin]]
name = "cocrdlic"
path = "rust_output/COCRDLIC.rs"

[[bin]]
name = "cocrdslc"
path = "rust_output/COCRDSLC.rs"

[[bin]]
name = "cocrdupc"
path = "rust_output/COCRDUPC.rs"

[[bin]]
name = "codate01"
path = "rust_output/CODATE01.rs"

[[bin]]
name = "comen01c"
path = "rust_output/COMEN01C.rs"

[[bin]]
name = "copaua0c"
path = "rust_output/COPAUA0C.rs"

[[bin]]
name = "copaus0c"
path = "rust_output/COPAUS0C.rs"

[[bin]]
name = "copaus1c"
path = "rust_output/COPAUS1C.rs"

[[bin]]
name = "copaus2c"
path = "rust_output/COPAUS2C.rs"

[[bin]]
name = "corpt00c"
path = "rust_output/CORPT00C.rs"

[[bin]]
name = "cosgn00c"
path = "rust_output/COSGN00C.rs"

[[bin]]
name = "cotrn00c"
path = "rust_output/COTRN00C.rs"

[[bin]]
name = "cotrn01c"
path = "rust_output/COTRN01C.rs"

[[bin]]
name = "cotrn02c"
path = "rust_output/COTRN02C.rs"

[[bin]]
name = "cotrtlic"
path = "rust_output/COTRTLIC.rs"

[[bin]]
name = "cotrtupc"
path = "rust_output/COTRTUPC.rs"

[[bin]]
name = "cousr00c"
path = "rust_output/COUSR00C.rs"

[[bin]]
name = "cousr01c"
path = "rust_output/COUSR01C.rs"

[[bin]]
name = "cousr02c"
path = "rust_output/COUSR02C.rs"

[[bin]]
name = "cousr03c"
path = "rust_output/COUSR03C.rs"

[[bin]]
name = "csutldtc"
path = "rust_output/CSUTLDTC.rs"

[[bin]]
name = "dbunldgs"
path = "rust_output/DBUNLDGS.rs"

[[bin]]
name = "paudblod"
path = "rust_output/PAUDBLOD.rs"

[[bin]]
name = "paudbunl"
path = "rust_output/PAUDBUNL.rs"

